# AgenticGen

./: .env.example  .gitignore  LICENSE  README.md  README_en.md  README_zh.md  requirements.txt  test_metrics_integration.py  test_rust_metrics_only.py
.github/workflows/: ci.yml
agent/: __init__.py  agent_config.py  agent_factory.py  agent_manager.py
ai_models/: __init__.py  model_comparison.py  model_manager.py
api/: __init__.py  main.py  performance.py
api/routes/: __init__.py  admin.py  ai_models.py  auth.py  chat.py  files.py  knowledge.py  orchestration.py  rbac.py  tools.py
auth/: __init__.py  crypto.py  decorators.py  identity_verification.py  middleware.py  permissions.py  rbac.py
cache/: __init__.py  cache_manager.py  manager.py  multi_level_cache.py  response_cache.py  thread_cache.py
collaboration/: __init__.py  whiteboard.py  workspace.py
config/: __init__.py  config.py  database.py  logging.py  prompts.py
db/: __init__.py  base_model.py  connection.py  database.py  models.py  query_optimizer.py
db/migrations/: optimize_indexes.py
deployment/: .env.example  Dockerfile  docker-compose.yml  init.sql  nginx.conf
docs/: README.md  architecture-diagrams.md  module-architecture.md
frontend/: index.html  manifest.json
frontend/css/: mobile.css  style.css
frontend/js/: app.js
knowledge/: __init__.py  document_processor.py  embeddings.py  knowledge_base.py  knowledge_graph.py  retrieval.py  semantic_search.py
monitoring/: __init__.py  alerting.py  dashboard.py  metrics_collector.py
optimization/: AgenticGen_Optimization_Plan.md  Performance_Optimization_Plan_Go_Rust.md  性能优化计划_Go_Rust_中文.md  重构后目录结构.md
orchestration/: __init__.py  orchestrator.py  task_scheduler.py
scripts/: init_cache.py  optimize_database.py  start.sh  test_runner.py
security/: __init__.py  middleware.py  security_utils.py
services/cache-engine/: Cargo.toml  python_wrapper.py
services/cache-engine/src/: lib.rs
services/metrics-collector/: Cargo.toml  build.sh  python_wrapper.py
services/metrics-collector/src/: lib.rs
services/orchestrator/: Dockerfile  build.sh  go.mod  main.go
services/orchestrator/internal/agent/: manager.go
services/orchestrator/internal/coordinator/: coordinator.go
services/orchestrator/internal/scheduler/: scheduler.go
services/orchestrator/internal/websocket/: gateway.go
services/orchestrator/pkg/models/: agent.go  event.go
services/python-sandbox/: Cargo.toml  README.md  build.sh  demo.py  python_wrapper.py
services/python-sandbox/src/: lib.rs
services/vector-engine/: Cargo.toml  Dockerfile  README.md  build.rs  build.sh  demo.py  python_wrapper.py
services/vector-engine/src/: lib.rs
tests/: test_api.py  test_integration.py
tests/performance/: smoke_test.js
tools/: __init__.py  expanded_tools.py  file_manager.py  python_executor.py  sandbox.py  sql_executor.py
