[package]
name = "cache-engine"
version = "0.1.0"
edition = "2021"
authors = ["AgenticGen Team"]
description = "High-performance multi-level cache engine for AgenticGen"

[lib]
name = "cache_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Lock-free data structures
parking_lot = "0.12"
crossbeam = "0.8"
dashmap = "5.5"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
# Time handling
chrono = { version = "0.4", features = ["serde"] }
# Async runtime
tokio = { version = "1.35", features = ["full"] }
# Memory mapping
memmap2 = "0.9"
# Hashing (simple alternative)
twox-hash = "1.6"
# Note: Redis and compression can be added later
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Error handling
anyhow = "1.0"
# SIMD optimizations
[target.'cfg(target_arch = "x86_64")'.dependencies]
core_affinity = "0.8"

[dev-dependencies]
rand = "0.8"