[package]
name = "metrics-collector"
version = "0.1.0"
edition = "2021"
authors = ["AgenticGen Team"]
description = "High-performance metrics collector for AgenticGen"

[lib]
name = "metrics_collector"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
# Lock-free data structures
parking_lot = "0.12"
crossbeam = "0.8"
# Atomic operations
crossbeam-utils = "0.8"
# Time handling
chrono = { version = "0.4", features = ["serde"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Metrics aggregation
hdrhistogram = "7.5"
# High-performance hashmap
dashmap = "5.5"
# Error handling
anyhow = "1.0"
# Memory mapping
memmap2 = "0.9"

# Optional: SIMD optimizations
[target.'cfg(target_arch = "x86_64")'.dependencies]
core_affinity = "0.8"

[dev-dependencies]
criterion = "0.5"

# Remove benchmark for now as it's causing build issues
# [[bench]]
# name = "metrics_benchmark"
# harness = false