[package]
name = "python-sandbox"
version = "0.1.0"
edition = "2021"

[lib]
name = "python_sandbox"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
parking_lot = "0.12"
dashmap = "6.1"

# Security and isolation
tempfile = "3.14"
libc = "0.2"
nix = { version = "0.29", features = ["process", "signal"] }
which = "7.0"
rlimit = "0.10"

# Async and futures
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Process management
signal-hook = "0.3"

[dev-dependencies]
tempdir = "0.3"
pretty_assertions = "1.4"

[features]
default = ["cgroups"]
cgroups = []